--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
           <img src="./27.jpg" alt="Chocolate Cake" class="w-full h-48 object-cover">
           <div class="p-6">
             <h3 class="text-2xl font-semibold mb-2">کیک شکلاتی کلاسیک</h3>
-            <p class="text-gray-600 mb-4">کیک شکلاتی غنی با گاناش ابریشمی و تزئینات بی‌نظیر.</p>
+            <p class="text-gray-600 mb-4">کیک شکلاتی  با گاناش و تزئینات شکلاتی بی نظیر.</p>
             <span class="block text-xl font-bold text-primary">CODE #115</span>
           </div>
         </div>
@@ -331,7 +331,7 @@
           <img src="./7.jpg" alt="Vanilla Cake" class="w-full h-48 object-cover">
           <div class="p-6">
             <h3 class="text-2xl font-semibold mb-2">کیک وانیلی رویایی</h3>
-            <p class="text-gray-600 mb-4">طعم اصیل وانیل در کنار کرم‌پنیری سبک و دلنشین.</p>
+            <p class="text-gray-600 mb-4">طعم اصیل وانیل در کنار  خامه سبک و دلنشین.</p>
             <span class="block text-xl font-bold text-primary">CODE #113</span>
           </div>
         </div>
@@ -354,7 +354,7 @@
         <div class="card bg-white rounded-lg shadow-md overflow-hidden text-right">
             <img src="./29.jpg" alt="Lemon Cake" class="w-full h-48 object-cover">
             <div class="p-6">
-                <h3 class="text-2xl font-semibold mb-2">کیک لیمویی تازه‌کننده</h3>
+                <h3 class="text-2xl font-semibold mb-2">کیک لیمویی </h3>
                 <p class="text-gray-600 mb-4">طعم ترش و شیرین لیمو با خمیر لطیف کیک.</p>
                 <span class="block text-xl font-bold text-primary">CODE #109</span>
             </div>
